<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, PpssppActivity!</string>
    <string name="app_name">魔禁启动姬_Beta</string>
    <string name="shortcut_name">PPSSPP game</string>

    <string name="bad_disc_title">Unsupported disc</string>
    <string name="bad_disc_message">The file you selected wasn\'t recognized as a game.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="download">Download</string>
	<string name="HomeActivityName">首页</string>

	<string name="http_unknown_error">请求出错，未知错误</string>
	<string name="http_token_error">登录失效，请重新登录</string>
	<string name="http_data_explain_error">数据解析异常，请稍后</string>
	<string name="http_server_out_time">服务器请求超时，请稍后再试</string>
	<string name="http_network_error">请求失败，请检查网络设置</string>
	<string name="http_response_error">服务器响应异常，请稍后再试，响应码：%d，响应信息：%s</string>
	<string name="http_server_error">服务器连接异常，请稍后再试</string>
	<string name="http_request_cancel">请求被中断，请重试</string>
	<string name="http_response_null_body">服务器数据返回异常，请稍后再试</string>
	<string name="http_response_md5_error">下载失败，文件 md5 校验失败</string>
    <string name="installGame">安装游戏</string>
	<string name="deleteGame">卸载游戏</string>
	<string name="textureStore">材质工坊</string>
	<string name="updateAPP">更新</string>
	<string name="setting">设置</string>

</resources>
