<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/background"
	android:baselineAligned="false"
	android:gravity="center">

	<RelativeLayout
		android:layout_width="0dp"
		android:layout_height="match_parent"
		android:layout_weight="1">

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:layout_centerInParent="true"
			android:orientation="vertical">

			<LinearLayout
				android:id="@+id/installGame"
				android:layout_width="match_parent"
				android:layout_height="50dp"
				android:background="?android:attr/selectableItemBackground"
				android:gravity="center"
				tools:ignore="TextSizeCheck">

				<ImageView
					android:layout_width="50dp"
					android:layout_height="25dp"
					android:layout_marginEnd="10dp"
					android:importantForAccessibility="no"
					android:src="@drawable/install" />

				<com.mojin.qidong.ui.control.StrokeTextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="2dp"
					android:layout_marginEnd="10dp"
					android:text="@string/installGame"
					android:textColor="@color/textColor"
					android:textSize="16sp" />
			</LinearLayout>

			<LinearLayout
				android:id="@+id/deleteGame"
				android:layout_width="match_parent"
				android:layout_height="50dp"
				android:layout_marginTop="10dp"
				android:background="?android:attr/selectableItemBackground"
				android:gravity="center"
				tools:ignore="TextSizeCheck">

				<ImageView
					android:layout_width="50dp"
					android:layout_height="25dp"
					android:layout_marginEnd="10dp"
					android:importantForAccessibility="no"
					android:src="@drawable/delete" />

				<com.mojin.qidong.ui.control.StrokeTextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="2dp"
					android:layout_marginEnd="10dp"
					android:text="@string/deleteGame"
					android:textColor="@color/textColor"
					android:textSize="16sp" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="50dp"
				android:layout_marginTop="10dp"
				android:background="?android:attr/selectableItemBackground"
				android:gravity="center"
				tools:ignore="TextSizeCheck">

				<ImageView
					android:layout_width="50dp"
					android:layout_height="25dp"
					android:layout_marginEnd="10dp"
					android:importantForAccessibility="no"
					android:src="@drawable/optimize" />

				<com.mojin.qidong.ui.control.StrokeTextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="2dp"
					android:layout_marginEnd="10dp"
					android:text="@string/textureStore"
					android:textColor="@color/textColor"
					android:textSize="16sp" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="50dp"
				android:layout_marginTop="50dp"
				android:background="?android:attr/selectableItemBackground"
				android:gravity="center"
				tools:ignore="TextSizeCheck">

				<ImageView
					android:layout_width="50dp"
					android:layout_height="25dp"
					android:layout_marginEnd="20dp"
					android:importantForAccessibility="no"
					android:src="@drawable/updateAPP" />

				<com.mojin.qidong.ui.control.StrokeTextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginEnd="25dp"
					android:text="@string/updateAPP"
					android:textColor="@color/textColor"
					android:textSize="16sp" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="50dp"
				android:layout_marginTop="10dp"
				android:background="?android:attr/selectableItemBackground"
				android:gravity="center"
				tools:ignore="TextSizeCheck">

				<ImageView
					android:layout_width="50dp"
					android:layout_height="25dp"
					android:layout_marginEnd="20dp"
					android:importantForAccessibility="no"
					android:src="@drawable/setting" />

				<com.mojin.qidong.ui.control.StrokeTextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="2dp"
					android:layout_marginEnd="25dp"
					android:text="@string/setting"
					android:textColor="@color/textColor"
					android:textSize="16sp" />
			</LinearLayout>

		</LinearLayout>

		<View
			android:layout_width="1px"
			android:layout_height="300dp"
			android:layout_alignParentEnd="true"
			android:layout_centerVertical="true"
			android:background="#969696"
			tools:ignore="PxUsage" />

	</RelativeLayout>

	<LinearLayout
		android:layout_width="0dp"
		android:layout_height="match_parent"
		android:layout_weight="4"
		android:gravity="center" />

</LinearLayout>
